Fixed Showcase sizes on mobile

--- a/Portfolio/src/App.css
+++ b/Portfolio/src/App.css
@@ -67,7 +67,7 @@
 
 .Showcase {
   width: 50%;
-  min-width: 500px;
+  min-width: 350px;
   border: 1px solid black;
 }
 
